Update submodule URL, fix Dockerfile base image, update dependencies, add illustration2vec test script
- Updated submodule URL to the fork repository link
- Fixed base image version in Dockerfile for better compatibility and stability
- Updated `requirements.txt` to reflect latest dependency versions
- Added a new test script for illustration2vec model verification

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Illustration2Vec Requirements
+numpy # numpy.distutils is deprecated, and will be removed for Python >= 3.12 (https://stackoverflow.com/questions/70583969/pyinstaller-no-module-named-numpy-distutils)
 pillow
-chainer
 scikit-image
+chainer>=2.0.0
 # Jupyter Notebook Requirements
 ipyparams
 notebook
