--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,33 +1,33 @@
 name: Lint and Format
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  lint-and-format:
-    runs-on: ubuntu-latest
+    lint-and-format:
+        runs-on: ubuntu-latest
 
-    steps:
-      # Checkout the repository
-      - uses: actions/checkout@v4
-      # Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff autopep8
-      # Run Ruff Linting
-      - name: Run Ruff Linting
-        run: |
-          ruff check .
-      # Run autopep8 Formatting
-      - name: Run autopep8 Formatting
-        run: |
-          autopep8 --in-place --recursive .
+        steps:
+            # Checkout the repository
+            - uses: actions/checkout@v4
+            # Set up Python
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: "3.x"
+            # Install dependencies
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install ruff autopep8
+            # Run Ruff Linting
+            - name: Run Ruff Linting
+              run: |
+                  ruff check .
+            # Run autopep8 Formatting
+            - name: Run autopep8 Formatting
+              run: |
+                  autopep8 --in-place --recursive .
